main.css
/* spaces */
.space-12 {
	margin-bottom: 12px;
}

.space-24 {
	margin-bottom: 24px;
}

.space-40 {
	margin-bottom: 40px;
}

.space-60 {
	margin-bottom: 60px;
}

.space-100 {
	margin-bottom: 100px;
}

.separated-spacer {
	height: 100px;
}

.connected-spacer {
	height: 40px;
}

html {
  box-sizing: border-box;
  color: #222222;
  background-color: #f8f8f8;
}

*, *:before, *:after {
  box-sizing: inherit;
}



/* colours */

.white {
	color: #FFFFFF;
}

.green {
	color: #72FBD7;
}

.black {
	color: #222222;
}

/* html {
	background-color: #0115CE;
} */


/* Typography */

@font-face {
  font-family: "mark-book";
  src: url("fonts/MarkNaceroWeb-Book.woff2") format("woff2"),
    url("fonts/MarkNaceroWeb-Book.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "mark-bold";
  src: url("fonts/MarkNaceroWeb-Bold.woff2") format("woff2"),
    url("fonts/MarkNaceroWeb-Bold.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

.hero {
	font-family: ivypresto-display,serif;
	font-weight: 300;
	font-style: normal;
	font-size: 128px;
	line-height: 105%;
}

.headline-1 {
	font-family: ivypresto-display,serif;
	font-weight: 300;
	font-style: normal;
	font-size: 90px;
	line-height: 105%;
}

.headline-2  {
  font-family: mark-bold,sans-serif;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-size: 1rem;
  line-height: 1.5;
}

.eyebrow {
  font-family: mark-bold,sans-serif;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-size: 0.625rem;
  line-height: 1.5;
}

.body-copy {
	font-family: mark-book,sans-serif;
   font-size: 1rem; /* 16px */
   line-height: 1.5;
}

.body-copy-bold {
	font-family: mark-bold,sans-serif;
   font-size: 1.125rem; /* 18px */
   line-height: 1.5;
}

/* end of: Typography */



/* old-code */

img {
	width: 1440px;
}
.video-fill {
	width: 1440px;
}
.container {
	margin: 0 auto;
	max-width: 1440px;
}

.swap-out {
	margin-top: -200px;
}

.morespace {
	margin-top: 200px;
}



/* header-block */

.header-block {
	padding-top: 210px;
	padding-bottom: 60px;
	background-color: #0115CE;
}

#header-block .body-copy {
	max-width: 600px;
}

.type-wrapper {
	max-width: 1440px;
	padding: 0 60px 0 60px;
	position: relative;
}

.title-box {
	max-width: 600px;
}

.rule {
	height: 1px;
	background-color: #FFF;
	max-width: 400px;
	margin: 0 auto;
}

.warning-block {
	background-color: black;
	height: 100vh;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.warning-block .headline-2, .body-copy {
	text-align: center;
}

/* browser resize */

@media (max-width: 1360px) {
	.header-block {
		display: none;
	}

	.content {
		display: none;
	}
}

@media (min-width: 1359px) {

	.warning-block {
		display: none;
	}

}












































/*  */

